# handlebars-inflector

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
