[package]
name = "handlebars-inflector"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.1"
authors = ["Ivan Ganev <iganev@cytec.bg>"]
description = "Handlebars string inflector helper."
keywords = ["handlebars", "inflector", "helper", "singular", "plural"]
categories = ["template-engine", "web-programming", "value-formatting", "text-processing"]
homepage = "https://github.com/iganev/handlebars-inflector"
repository = "https://github.com/iganev/handlebars-inflector"
documentation = "https://docs.rs/crate/handlebars-inflector/"
readme = "README.md"
license = "BSD-2"
license-file = "LICENSE"

[lib]
name = "handlebars_inflector"
path = "src/lib.rs"

[dependencies]
handlebars = { version = "^4" }
Inflector = { version = "^0.11" }

[badges]
maintenance = { status = "actively-developed" }